[package]
name = "twitch_helix"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-builder = "0.5.1"
thiserror = "1.0.10"
twitch-oauth2 = {path = "../oauth2", version = "0.1.0"}
serde = { version = "1.0", features = ["derive"] }
