[package]
name = "mock"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_api2 = { path = "../.", features = ["reqwest_client"] }
twitch_oauth2 = { path = "../twitch_oauth2" }
reqwest = "0.11.4"
