[package]
name = "twitch-oauth2"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = {version = "3.0.0-alpha.9", features = ["futures-03", "reqwest-010"], default-features = false}
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
