[package]
name = "twitch_oauth2"
version = "0.3.1"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2018"
repository = "https://github.com/Emilgardis/twitch_utils"
license = "MIT OR Apache-2.0"
description = "Oauth2 for Twitch endpoints"
keywords = ["oauth", "twitch","async","asynchronous"]
documentation = "https://docs.rs/twitch_oauth2/0.3.1"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
oauth2 = { version = "3.0.0", features = ["futures-03", "reqwest-010"], default-features = false }
thiserror = "1.0.20"
displaydoc = "0.1.7"
serde = "1.0.115"
serde_json = "1.0.57"
async-trait = "0.1.37"



[dev-dependencies]
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
dotenv = "0.15.0"
