[package]
name = "twitch_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
displaydoc = "0.2"
http = "0.2"
typed-builder = { version = "0.10", optional = true }
url = "2.2"
once_cell = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_repr = "0.1"
aliri_braid = "0.1"
time = { version = "0.3", optional = true, default-features = false, features = [
    "parsing",
    "formatting",
] }
tracing = { version = "0.1", optional = true }


[features]
default = []

deny_unknown_fields = []
