[package]
name = "twitch_api2"
version = "0.3.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2018"
repository = "https://github.com/Emilgardis/twitch_utils"
license = "MIT OR Apache-2.0"
description = "Library for talking with the new Twitch API aka. \"Helix\" and TMI."
keywords = ["oauth", "twitch", "async", "asynchronous", "api"]
documentation = "https://docs.rs/twitch_api2/0.3.0"
readme = "README.md"
build = "build.rs"
[dependencies]
typed-builder = "0.6.0"
thiserror = "1.0.20"
displaydoc = "0.1.7"
twitch_oauth2 = { version = "^0.4.0", optional = true }
serde = { version = "1.0.115", features = ["derive"], optional = true }
serde_derive = { version = "1.0.115", optional = true }
async-trait = { version = "0.1.37", optional = true }
serde_json = { version = "1.0.57", optional = true }
serde_repr = { version = "0.1.6", optional = true }
reqwest = { version = "0.10.7", optional = true }
url = { version = "2.1.1", optional = true }
http = { version = "0.2.1", optional = true }

[features]
default = ["tmi", "helix"]

helix = [
    "twitch_oauth2",
    "url",
    "reqwest",
    "serde",
    "serde_derive",
    "async-trait",
    "serde_json",
    "serde_repr",
    "http",
]
tmi = ["reqwest", "serde", "serde_json"]

[dev-dependencies]
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
dotenv = "0.15.0"

[build-dependencies]
version_check = "0.9.2"

