[package]
name = "twitch_api2"
version = "0.4.1"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
edition = "2018"
repository = "https://github.com/Emilgardis/twitch_utils"
license = "MIT OR Apache-2.0"
description = "Library for talking with the new Twitch API aka. \"Helix\" and TMI."
keywords = ["oauth", "twitch", "async", "asynchronous", "api"]
documentation = "https://docs.rs/twitch_api2/0.4.1"
readme = "README.md"
build = "build.rs"
[dependencies]
typed-builder = "0.6.0"
thiserror = "1.0.20"
displaydoc = "0.1.7"
futures = "0.3.5"
http = "0.2.1"
url = { version = "2.1.1", optional = true }
twitch_oauth2 = { version = "^0.4.0", optional = true }
serde = { version = "1.0.115", features = ["derive"], optional = true }
serde_derive = { version = "1.0.115", optional = true }
async-trait = { version = "0.1.38", optional = true }
serde_json = { version = "1.0.57", optional = true }
serde_repr = { version = "0.1.6", optional = true }
reqwest = { version = "0.10.7", optional = true }
surf = { version = "2.0.0-alpha.4", optional = true, git = "https://github.com/http-rs/surf.git", branch = "main" }
http-types = { version = "2.4.0", optional = true, features = ["hyperium_http"] }

[features]
default = ["tmi", "helix"]

helix = [
    "twitch_oauth2",
    "url",
    "serde",
    "serde_derive",
    "async-trait",
    "serde_json",
    "serde_repr",
]
tmi = ["serde", "serde_json"]

[dev-dependencies]
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
dotenv = "0.15.0"

[build-dependencies]
version_check = "0.9.2"


[[example]]
name = "automod_check"
path = "examples/automod_check.rs"
required-features = ["twitch_oauth2/reqwest_client", "reqwest"]
[[example]]
name = "get_channel_status"
path = "examples/get_channel_status.rs"
required-features = ["twitch_oauth2/reqwest_client", "reqwest"]

[[example]]
name = "get_moderation"
path = "examples/get_moderation.rs"
required-features = ["twitch_oauth2/surf_client", "surf", "http-types/hyperium_http"]

[[example]]
name = "get_streams_and_chatters"
path = "examples/get_streams_and_chatters.rs"
required-features = ["twitch_oauth2/surf_client"]

[[example]]
name = "modify_channel"
path = "examples/modify_channel.rs"
required-features = ["twitch_oauth2/surf_client"]
