[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
xshell = "0.2.2"
once_cell = "1.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
