[package]
name = "client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
twitch_api = { workspace = true, features = ["reqwest", "helix"] }
twitch_oauth2 = { workspace = true }
