[package]
name = "custom"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
twitch_api = { workspace = true, features = ["reqwest", "helix", "unsupported"] }
twitch_oauth2 = { workspace = true }
