[package]
name = "eventsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11", features = ["with-axum"], git = "https://github.com/djc/askama", rev = "eeec6f0" }
askama_axum = { version = "0.1", git = "https://github.com/djc/askama", rev = "eeec6f0" }
axum = { version = "0.6.20", features = ["tower-log", "http2", "ws"] }
clap = { version = "4.4.7", features = ["derive", "env"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dotenvy = "0.15.7"
eyre = { version = "0.6" }
futures = "0.3.28"
hyper = "0.14"
reqwest = "0.11.22"
retainer = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tower = "0.4"
tower-http = { version = "0.4.4", features = ["fs", "trace", "catch-panic"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.1.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twitch_api = { workspace = true, features = [
    "reqwest",
    "helix",
    "eventsub",
    "hmac",
] }
twitch_oauth2 = { workspace = true }
