[package]
name = "eventsub_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "env"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dotenvy = "0.15.6"
eyre = { version = "0.6" }
futures = "0.3.25"
hyper = "0.14"
reqwest = { version = "0.11.13", features = ["json"] }
retainer = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
twitch_api = { workspace = true, features = [
    "reqwest",
    "helix",
    "eventsub",
    "hmac",
    "unsupported",
    "deny_unknown_fields",
] }
twitch_oauth2 = { workspace = true }
url = "2.3.1"
