[package]
name = "tower_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["client", "http1", "tcp"] }
hyper-tls = "0.5.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["retry", "util", "limit", "buffer"] }
tower-http = { version = "0.4.0", features = ["set-header", "trace", "decompression-gzip"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twitch_api = { workspace = true, features = ["tower", "helix", "tracing"] }
twitch_oauth2 = { workspace = true }
