[package]
name = "tower_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.28"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["http1"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["retry", "util", "limit", "buffer"] }
tower-http = { version = "0.5.2", features = ["set-header", "trace", "decompression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twitch_api = { workspace = true, features = ["tower", "helix", "tracing"] }
twitch_oauth2 = { workspace = true }
