[package]
name = "twitch_oauth2-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_api = { workspace = true, features = ["reqwest", "helix"] }
twitch_oauth2 = { workspace = true }
reqwest = { workspace = true, default-features = true }
tokio = { version = "1.40.0", features = ["macros"] }
